--- a/BlazorLearningKickOff/Client/BlazorLearningKickOff.Client.csproj
+++ b/BlazorLearningKickOff/Client/BlazorLearningKickOff.Client.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Shared\BlazorLearningKickOff.Shared.csproj" />
+    <ProjectReference Include="..\BlazorLearningKickOff.Components\BlazorLearningKickOff.Components.csproj" />
   </ItemGroup>
 
 </Project>
